<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_next"
        android:layout_width="304dp"
        android:layout_height="75dp"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="53dp"
        android:backgroundTint="@color/blue"
        android:shadowColor="@color/blue"

        android:text="Choose"
        android:textSize="20sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.945" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="450dp"
        android:layout_height="100dp"
        android:background="@color/purple"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:layout_editor_absoluteX="-13dp"
        tools:layout_editor_absoluteY="-2dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Language select"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.704" />

    <Button
        android:id="@+id/button_lng_5"
        android:layout_width="370dp"
        android:layout_height="69dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/amarilla"
        android:gravity="left|center_vertical"
        android:text="@string/kazakh"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.678"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button_lng_1"
        android:layout_width="370dp"
        android:layout_height="69dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/amarilla"
        android:gravity="left|center_vertical"
        android:text="@string/russian"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.09"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button_lng_2"
        android:layout_width="370dp"
        android:layout_height="69dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/amarilla"
        android:gravity="left|center_vertical"
        android:text="@string/english"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.236"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button_lng_3"
        android:layout_width="370dp"
        android:layout_height="69dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/amarilla"
        android:gravity="left|center_vertical"
        android:text="@string/chinese"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.385"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button_lng_4"
        android:layout_width="370dp"
        android:layout_height="69dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/amarilla"
        android:gravity="left|center_vertical"
        android:text="@string/belarus"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.531"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/what_is_your_mother_language"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>